--- a/main.css
+++ b/main.css
@@ -1,10 +1,18 @@
-
-
 #product-overview {
-  background: url("freedom.jpg");
+  background: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent), url("images/freedom.jpg") left 20% top 35%/cover no-repeat border-box, #ff1b68;
+  /* background-image: url("freedom.jpg"); */
+  /* background-size: cover; */
+  /* background-repeat: no-repeat; */
+  /* background-position: left 20% top 35%; */
+  /* background-origin: border-box; */
+  /* background-clip: border-box; */
+  /* background-image: linear-gradient(red, blue); */
+  /* background-image: radial-gradient(red, blue); */
   width: 100%;
   height: 528px;
   padding: 10px;
+  margin-top: 37px;
+  position: relative;
 }
 
 .section-title {
@@ -15,6 +23,9 @@
 #product-overview h1 {
   color: white;
   font-family: 'Anton', sans-serif;
+  position: absolute;
+  bottom: 5%;
+  left: 3%;
 }
 
 .plan__list {
@@ -104,6 +115,7 @@
   border: 2px solid #424242;
   border-radius: 50%;
   margin: auto;
+  padding: 20px;
 }
 
 .key-feature__description {
