--- a/shared.css
+++ b/shared.css
@@ -7,6 +7,17 @@ body {
   margin: 0;
 }
 
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
+  z-index: 100;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
+}
+
 .main-header {
   width: 100%;
   background: #2ddf5c;
