--- a/shared.css
+++ b/shared.css
@@ -3,15 +3,20 @@
 }
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   margin: 0;
+}
+
+main {
+  min-height: calc(100vh - 3.5rem - 8rem);
+  margin-top: 3.5rem;
 }
 
 .backdrop {
   position: fixed;
+  display: none;
   top: 0;
   left: 0;
-  display: none;
   z-index: 100;
   width: 100vw;
   height: 100vh;
@@ -20,11 +25,11 @@ body {
 
 .main-header {
   width: 100%;
-  background: #2ddf5c;
-  padding: 8px 16px;
   position: fixed;
   top: 0;
   left: 0;
+  background: #2ddf5c;
+  padding: 0.5rem 1rem;
   z-index: 1;
 }
 
@@ -59,21 +64,19 @@ body {
   color: #0e4f1f;
   text-decoration: none;
   font-weight: bold;
-  font-size: 22px;
-  height: 22px;
+  height: 2.5rem;
+  /* width: 20px; */
   display: inline-block;
   vertical-align: middle;
 }
 
 .main-header__brand img {
   height: 100%;
+  /* width: 100%; */
 }
 
 .main-nav {
-  display: inline-block;
-  text-align: right;
-  width: calc(100% - 122px);
-  vertical-align: middle;
+  display: none;
 }
 
 .main-nav__items {
@@ -84,7 +87,7 @@ body {
 
 .main-nav__item {
   display: inline-block;
-  margin: 0 16px;
+  margin: 0 1rem;
 }
 
 .main-nav__item a,
@@ -92,7 +95,7 @@ body {
   text-decoration: none;
   color: #0e4f1f;
   font-weight: bold;
-  padding: 3px 0;
+  padding: 0.2rem 0;
 }
 
 .main-nav__item a:hover,
@@ -105,7 +108,7 @@ body {
 .mobile-nav__item--cta a {
   color: white;
   background: #ff1b68;
-  padding: 8px 16px;
+  padding: 0.5rem 1rem;
   border-radius: 8px;
 }
 
@@ -118,10 +121,23 @@ body {
   border: none;
 }
 
+@media (min-width: 40rem) {
+  .toggle-button {
+    display: none;
+  }
+
+  .main-nav {
+    display: inline-block;
+    text-align: right;
+    width: calc(100% - 44px);
+    vertical-align: middle;
+  }
+}
+
 .main-footer {
   background: black;
-  padding: 32px;
-  margin-top: 48px;
+  padding: 2rem;
+  margin-top: 3rem;
 }
 
 .main-footer__links {
@@ -132,8 +148,8 @@ body {
 }
 
 .main-footer__link {
-  display: inline-block;
-  margin: 0 16px;
+  display: block;
+  margin: 1rem 0;
 }
 
 .main-footer__link a {
@@ -179,7 +195,7 @@ body {
   color: white;
   font: inherit;
   border: 1.5px solid #0e4f1f;
-  padding: 8px;
+  padding: 0.5rem;
   border-radius: 8px;
   font-weight: bold;
   cursor: pointer;
@@ -196,5 +212,12 @@ body {
 }
 
 .open {
-  display: block !important;
+    display: block !important;
+}
+
+@media (min-width: 40rem) {
+  .main-footer__link {
+    display: inline-block;
+    margin: 0 1rem;
+  }
 }
